# rlmagents

./: .env.runner.example  .gitignore  .release-please-manifest.json  AGENTS.md  Makefile  README.md  RLM_INTEGRATION_SETUP.md  docker-compose.runner.yml  release-please-config.json  todo.md
.github/: RELEASING.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/actions/uv_setup/: action.yml
.github/workflows/: _lint.yml  _test.yml  auto-label-by-package.yml  check_cli_sdk_pin.yml  check_extras_sync.yml  check_lockfiles.yml  check_versions.yml  ci.yml  pr_labeler_file.yml  pr_labeler_title.yml  pr_lint.yml  publish.yml  release-please.yml  release.yml  tag-external-contributions.yml
examples/downloading_agents/: README.md
examples/ralph_mode/: README.md  ralph_mode.py
libs/acp/: CHANGELOG.md  README.md  pyproject.toml
libs/acp/deepagents_acp/: server.py
libs/acp/examples/: demo_agent.py
libs/cli/: README.md  pyproject.toml
libs/harbor/: CHANGELOG.md  README.md  pyproject.toml
libs/rlmagents/: AGENTS.md  BOOTSTRAP_PROMPT.md  CHANGELOG.md  README.md  phase2prompt.md  pyproject.toml
libs/rlmagents/deepagents_cli/: __main__.py  _version.py  agent.py  app.py  config.py  file_ops.py  local_context.py  main.py  non_interactive.py  sessions.py  system_prompt.md  textual_adapter.py  tools.py  ui.py
libs/rlmagents/deepagents_cli/built_in_skills/skill-creator/: SKILL.md
libs/rlmagents/deepagents_cli/integrations/: __init__.py  langsmith.py  modal.py  runloop.py  sandbox_provider.py
libs/rlmagents/deepagents_cli/skills/: __init__.py  commands.py  load.py
libs/rlmagents/deepagents_cli/widgets/: __init__.py  chat_input.py  messages.py  status.py  welcome.py
libs/rlmagents/examples/: AGENTS.md  bootstrap_config.py  dogfood.py  rlm_system_prompt.md
libs/rlmagents/rlmagents/: __init__.py  graph.py  recipes.py  rlm_prompt.md  serialization.py  session_manager.py  types.py
libs/rlmagents/rlmagents/_harness/: __init__.py  filesystem.py  memory.py  skills.py  subagents.py  summarization.py
libs/rlmagents/rlmagents/_harness/backends/: __init__.py  composite.py  filesystem.py  local_shell.py  protocol.py  sandbox.py  state.py  store.py  utils.py
libs/rlmagents/rlmagents/_standalone/: __init__.py
libs/rlmagents/rlmagents/middleware/: __init__.py  _prompt.py  _state.py  _tools.py  rlm.py
libs/rlmagents/rlmagents/repl/: __init__.py  helpers.py  sandbox.py
libs/rlmagents/scripts/: repo_hygiene_check.sh
libs/rlmagents/tests/: conftest.py
libs/rlmagents/tests/integration_tests/: __init__.py  test_rlm_deepagents_integration.py
libs/rlmagents/tests/unit_tests/: test_cli_bundle.py  test_create_rlm_agent.py  test_graph.py  test_harness_filesystem_pdf.py  test_rlm_middleware.py  test_rlm_tools.py  test_session_manager.py  test_terminal_bench_scenarios.py
(+62 files in other folders)
