[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlmagents"
version = "0.0.4"
description = "RLM-enhanced agent harness with planning, filesystem, sub-agents, and profile-driven context isolation tools"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
keywords = ["agent", "rlm", "recursive-reasoning", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=1.2.10,<2.0.0",
    "langchain>=1.2.10,<1.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "langchain-openai>=1.1.8,<2.0.0",
    "langchain-deepseek>=1.0.0,<2.0.0",
    "textual>=6.0.0,<8.0.0",
    "textual-autocomplete>=3.0.0,<5.0.0",
    "prompt-toolkit>=3.0.52,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "markdownify>=0.13.0,<2.0.0",
    "langsmith>=0.6.6",
    "daytona>=0.113.0,<1.0.0",
    "modal>=0.65.0,<2.0.0",
    "runloop-api-client>=0.69.0",
    "tavily-python>=0.7.21,<1.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.0.0,<3.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "tomli-w>=1.0.0,<2.0.0",
]

[project.scripts]
rlmagents = "deepagents_cli:cli_main"
rlmagents-cli = "deepagents_cli:cli_main"

[dependency-groups]
dev = [
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.9",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.7",
]

[project.urls]
Repository = "https://github.com/Hmbown/rlmagents"

[tool.uv]
package = true

[tool.hatch.build.targets.sdist]
exclude = [
    "BOOTSTRAP_PROMPT.md",
    "phase2prompt.md",
]

[tool.hatch.build.targets.wheel]
packages = ["rlmagents", "deepagents_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"deepagents_cli/default_agent_prompt.md" = "deepagents_cli/default_agent_prompt.md"
"deepagents_cli/*.tcss" = "deepagents_cli/"

[tool.ruff]
line-length = 220

[tool.ruff.lint]
select = ["E", "F", "I", "TID252"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["rlmagents"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
asyncio_mode = "auto"
